Save changes before pulling

--- a/AuthorizationProject/Views/Account/AdminPanel.cshtml
+++ b/AuthorizationProject/Views/Account/AdminPanel.cshtml
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h2>Welcome Admin panel</h2>
-        <a asp-controller="Account" asp-action="Login">Login</a>
+        <a asp-controller="Account" asp-action="Login">LogOut</a>
     
     </div>
 </body>
